--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -3,7 +3,7 @@
         <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
         <div *ngIf="!showLoadingIndicator" style="height: -webkit-fill-available;">
             <div class="desktop-image">
-                <a href="{{promocao.link}}" target="{{promocao.linkBlank ? '_blank' : '_self'}}">
+                <a href="{{promocao.link ?? 'javascript:void(0)'}}" target="{{promocao.linkBlank ? '_blank' : '_self'}}">
                     <img style="width: 100%;" src="https://weebet.s3.amazonaws.com/{{ SLUG }}/paginaPromocao/{{ promocao.imagemDesktop }}" alt="">
                 </a>
             </div>
