--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
@@ -49,8 +49,8 @@
         <p class="income-tax">
             {{'bet.incomeTaxOnPrize' | translate}}:<span>{{aposta.incomeTaxOnPrize | currency}}</span>
         </p>
-        <p *ngIf="aposta.passador.percentualPremio > 0" class="cambista-paga">
-            Cambista paga: <span>{{cambistaPaga | currency}}</span>
+        <p *ngIf="enabledBookie" class="cambista-paga">
+            Cambista paga: <span>{{cambistaPaga ?? 0 | currency}}</span>
         </p>
         <p class="computado" *ngIf="aposta?.data_liquidacao">
             {{'geral.computadoEm' | translate}} <span>{{aposta.data_liquidacao | moment: 'DD/MM/YYYY HH:mm'}}</span>
