--- a/src/app/shared/layout/exibir-bilhete/rifa/exibir-bilhete-rifa/exibir-bilhete-rifa.component.html
+++ b/src/app/shared/layout/exibir-bilhete/rifa/exibir-bilhete-rifa/exibir-bilhete-rifa.component.html
@@ -40,8 +40,8 @@
         <p class="ganho" *ngIf="aposta.resultado || aposta.resultado == 'a confirmar'">
             {{'geral.premio' | translate}}: <span>{{aposta.premio | currency}}</span>
         </p>
-        <p *ngIf="aposta.passador.percentualPremio > 0" class="cambista-paga">
-            Cambista paga: <span>{{cambistaPaga | currency}}</span>
+        <p *ngIf="enabledBookie" class="cambista-paga">
+            Cambista paga: <span>{{cambistaPaga ?? 0 | currency}}</span>
         </p>
     </div>
     <div class="table-container">
