--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
@@ -81,8 +81,8 @@
             <p class="income-tax">
                 {{'bet.incomeTaxOnPrize' | translate}}:<span>{{aposta.incomeTaxOnPrize | currency}}</span>
             </p>
-            <p *ngIf="aposta.passador.percentualPremio > 0" class="cambista-paga">
-                Cambista paga:<span>{{cambistaPaga|currency}}</span>
+            <p *ngIf="enabledBookie" class="cambista-paga">
+                Cambista paga:<span>{{cambistaPaga ?? 0 |currency}}</span>
             </p>
     </div>
     <div class="table-container">
