--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
@@ -1,14 +1,18 @@
-.date-of-birth {
+.div-button-personalized {
     display: flex;
     height: 44px;
     flex-direction: column;
     border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.30);
-    background: #181818;
+    border: 1px solid rgba(var(--foreground-inputs-odds-rgb), .3);
+    color: var(--foreground-inputs-odds);
+    background: var(--inputs-odds);
     max-height: 44px;
     gap: 6px;
 }
 
+.input-style {
+    border: 1px solid rgba(var(--foreground-inputs-odds-rgb), .3);
+}
 
 .group-date-of-birth {
     display: flex;
@@ -42,13 +46,21 @@ select:focus {
     padding-right: 12px;
 }
 
-
-.label-date-of-birth {
+.label-personalized {
     max-height: 10px;
     padding-left: 14px;
-    color: rgba(255, 255, 255, 0.30);
+    color: rgba(var(--foreground-inputs-odds-rgb), .3);
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.text-input{
+    color: rgba(var(--foreground-inputs-odds-rgb), .3);
+    padding-left: 5px;
+}
+
+.select-nationality{
+    padding-right: 14px;
 }
