--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
@@ -107,6 +107,69 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="gender">
+                    <div class="label-personalized-gender">
+                        <span>{{'geral.genero' | translate}}</span>
+                    </div>
+                    <div class="gender-style">
+                        <div class="form-group mb-4 individual-genre">
+                            <div class="input-md">
+                                <div class="div-button-personalized">
+                                    <label>
+                                        <div>
+                                            <div class="div-button-gender">
+                                                <div>
+                                                    <input type="radio" formControlName="loginMode" value="masculino">
+                                                </div>
+                                                <div>
+                                                    <span class="radio-custom">{{'genero.masculino' | translate}}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group mb-4 individual-genre">
+                            <div class="input-md">
+                                <div class="div-button-personalized">
+                                    <label>
+                                        <div>
+                                            <div class="div-button-gender">
+                                                <div>
+                                                    <input type="radio" formControlName="loginMode" value="masculino">
+                                                </div>
+                                                <div>
+                                                    <span class="radio-custom">{{'genero.feminino' | translate}}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group mb-4 individual-genre">
+                            <div class="input-md">
+                                <div class="div-button-personalized">
+                                    <label>
+                                        <div>
+                                            <div class="div-button-gender">
+                                                <div>
+                                                    <input type="radio" formControlName="loginMode" value="masculino">
+                                                </div>
+                                                <div>
+                                                    <span class="radio-custom">{{'genero.outros' | translate}}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </form>
