fix: adjust general colors

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -13,11 +13,11 @@
   --highlight-foreground: #0a0a0a;
   --highlight-foreground-rgb: 10,10,10;
 
-  --championship: #0a0a0a;
-  --championship-rgb: 10,10,10;
+  --league: #0a0a0a;
+  --league-rgb: 10,10,10;
 
-  --championship-foreground: #ffffff;
-  --championship-foreground-rgb: 255,255,255;
+  --league-foreground: #ffffff;
+  --league-foreground-rgb: 255,255,255;
 
   --game: #181818;
   --game-rgb: 24, 24, 24;
@@ -37,7 +37,7 @@
   --input-foreground: #ffffff;
   --input-foreground-rgb: 255,255,255;
 
-  --danger: #f61a1a;
-  --warning: #c09516;
+  --warning: #f61a1a;
+  --alert: #c09516;
   --success: #6da544;
 }
