--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -453,7 +453,7 @@
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
                                 </a>
-                                <a> (click)="abrirAlterarSenha()">
+                                <a (click)="abrirAlterarSenha()">
                                     <span>
                                         <i class="fa fa-key"></i>
                                     </span>
