fix: condition to display agent app download button

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -80,7 +80,7 @@
             <a [routerLink]="['/informacoes/quem-somos']" *ngIf="hasQuemSomos">
                 {{'footer.quemSomos' | translate}}
             </a>
-            <ng-container *ngIf="this.slug != 'bet10.bet'; else elseUrlAfiliadoBet10"> 
+            <ng-container *ngIf="this.slug != 'bet10.bet'; else elseUrlAfiliadoBet10">
                 <a href="https://afiliados.{{sharedUrl}}" target="_blank" *ngIf="exibirLinkAfiliado">
                     {{'footer.afiliados' | translate}}
                 </a>
@@ -90,7 +90,7 @@
                     {{'footer.afiliados' | translate}}
                 </a>
             </ng-template>
-            <a target="_blank" download="app.apk" [href]="appUrl" *ngIf="hasApk && !isAppMobile">
+            <a target="_blank" download="app.apk" [href]="appUrl" *ngIf="displayAgentApp">
                 {{'footer.downloadApp' | translate}}
             </a>
             <!-- <a *ngIf="displayPwaInstallButton" (click)="installPwa()">
