--- a/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header" style="border-bottom: 0; background: var(--game)" [ngClass]="{'classe-esportes': aposta.tipo === 'esportes'}">
+<div class="modal-header" style="border-bottom: 0;" [ngClass]="{'classe-esportes': aposta.tipo === 'esportes'}">
     <h4 class="modal-title" id="modal-basic-title">Aposta</h4>
     <div class="action-buttons">
         <a *ngIf="isCliente && aposta.tipo === 'esportes'" href="{{urlBilheteAoVivo}}" target="_blank" title="ACOMPANHAR BILHETE AO-VIVO" >
