refactor: Add padding style to the footer-cupom class for better spacing.

--- a/src/app/shared/layout/exibir-bilhete/loteria/exibir-bilhete-loteria.component.css
+++ b/src/app/shared/layout/exibir-bilhete/loteria/exibir-bilhete-loteria.component.css
@@ -48,6 +48,10 @@
     padding: 10px;
 }
 
+.footer-cupom {
+    padding: 15px 10px;
+}
+
 #modalidade {
     font-size: 12px;
     font-weight: bolder;
